# iot-mesh-cluster

./: .gitignore  .vault_pass.txt.example  README.md  ansible.cfg.example  pyproject.toml
ansible/: site.yml
ansible/group_vars/all/: vars.yml  vault.yml
ansible/host_vars/: viscous.yml  wave.yml
ansible/inventory/: hosts.ini.example
ansible/roles/01_base_os/tasks/: main.yml
ansible/roles/02_hardware/handlers/: main.yml
ansible/roles/02_hardware/tasks/: main.yml
ansible/roles/02_hardware/templates/: dnsmasq.conf.j2  hostapd.conf.j2
ansible/roles/03_podman/tasks/: main.yml
ansible/roles/04_deploy/tasks/: main.yml
ansible/roles/04_deploy/templates/: etc-default-iot-mesh.j2
ansible/roles/05_voice_assistant/tasks/: main.yml
config/nats/: nats.conf.j2
config/quadlets/: nats-broker.container
scripts/: generate_nkeys.sh
src/bare_metal/: requirements.txt
src/bare_metal/common/: __init__.py  config.py  publisher.py  schema.py
src/bare_metal/display/: boot_status.py  matrix.py  status_renderer.py
src/bare_metal/logic/: connectivity_matrix.py  presence_matrix.py
src/bare_metal/media/: intercom.py
src/bare_metal/sensors/: mmwave.py  sensehat.py
src/bare_metal/systemd/: boot-status.service  intercom.service  logic-connectivity.service  logic-presence.service  mmwave.service  sensehat.service  voice-assistant.service
src/bare_metal/voice/: assistant.py  stt.py  vad.py  wake_word.py
